# shap-adwin

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sine1_short.csv  sine2.csv  stagger.csv
results/detectors_param/: ADWIN_SHAP_big.csv  ADWIN_big.csv  KSWIN_1.csv  KSWIN_2.csv  KSWIN_big.csv  KSWIN_otherdf.csv  KWSIN_9000.csv  KWSIN_alpha.csv  KWSIN_shap_refined.csv  KWSIN_shap_refined_3000.csv  PH_delta_d.csv  retrain_KSWIN_alpha.csv  retrain_KSWIN_shap_alpha.csv  retrain_PH_delta_d.csv  retrain_PH_shap_delta_d.csv  retrain_adwin_delta_d.csv  retrain_adwin_delta_d_2.csv  retrain_adwin_delta_d_3.csv  retrain_adwin_shap_delta_d.csv  retrain_adwin_shap_delta_d_2.csv
results/final_run/: abrupt_concept_drift_3000_df_reset_ADWIN.csv  abrupt_concept_drift_3000_df_reset_KSWIN.csv  abrupt_concept_drift_3000_df_reset_PH.csv  abrupt_concept_drift_noisy001_3000_df_reset_ADWIN.csv  abrupt_concept_drift_noisy001_3000_df_reset_KSWIN.csv  abrupt_concept_drift_noisy001_3000_df_reset_PH.csv  abrupt_concept_drift_noisy01_3000_df_reset_ADWIN.csv  abrupt_concept_drift_noisy01_3000_df_reset_KSWIN.csv  (+136 more)
shapadwin/: pyproject.toml
src/: PLOT - PAPER PLOTS.ipynb  RUN- Influence on Drift detection-Single drifts.ipynb  RUN- Influence on Drift detection.ipynb  all_detectors_fcts_retraining.py  bench_fcts.py  data_fcts.py  detectors_fcts.py  drift_generators.py  retrain_fcts.py  run_experiments.py  run_experiments_driftless.py  run_vizs.py  shap_fcts.py  shapdetect.py  viz_fcts.py
tests/: ALIBIdetect.py  RIVER.py  bench.py  drift.py  drift_gen.py  imports.py  retrain.py
(+2191 files in other folders)
